--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -35,7 +35,7 @@
 			<div class="seckill reg pull-left">
 				<div class="line1 reg pull-left"></div>
 				<div class="skilleft reg pull-left">
-					今日秒杀 <img src="images/seckil_03.gif" alt="" class="img3">
+					今日秒杀 <img src="../images/seckil_03.gif" alt="" class="img3">
 				</div>
 			</div>
 			<div class="seckil2 reg pull-right">
@@ -43,106 +43,21 @@
 				<span class="span">12</span>秒
 			</div>
 		</div>
-		<div class="maindiv">
-			<div class="reg pull-left imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-			<div class="reg pull-right imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-		</div>
-		<p class="p1"></p>
 		<div class="skill">
 			<div class="seckill reg pull-left">
 				<div class="line1 reg pull-left"></div>
 				<div class=" reg pull-right">
-					新品特惠 <img src="images/new_33.gif" alt="" class="img3">
+					新品特惠 <img src="../images/new_33.gif" alt="" class="img3">
 				</div>
 			</div>
 			<div class="seckil2 reg pull-right">
 				更多 <span class="img6 iconfont icon-qianjin"></span>
 			</div>
 		</div>
-		<div class="maindiv2">
-			<div class="reg pull-left imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-			<div class="reg pull-right imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
+		<div id="maindiv" style="padding-left:5px;margin:10px;">
+			<!-- 此处添加促销商品信息 -->
 		</div>
-		<p class="p1"></p>
-		<div class="skill">
-			<div class="seckill reg pull-left">
-				<div class="line1 reg pull-left"></div>
-				<div class=" reg pull-right">
-					新品特惠 <img src="images/new_33.gif" alt="" class="img3">
-				</div>
-			</div>
-			<div class="seckil2 reg pull-right">
-				更多<span class="img6 iconfont icon-qianjin"></span>
-			</div>
-		</div>
-		<div class="maindiv">
-			<div class="reg pull-left imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-			<div class="reg pull-right imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-		</div>
-		<p class="p1"></p>
-		<div class="skill">
-			<div class="seckill reg pull-left">
-				<div class="line1 reg pull-left"></div>
-				<div class=" reg pull-right">
-					新品特惠 <img src="images/new_33.gif" alt="" class="img3">
-				</div>
-			</div>
-			<div class="seckil2 reg pull-right">
-				更多<span class="img6 iconfont icon-qianjin"></span>
-			</div>
-		</div>
-		<div class="maindiv">
-			<div class="reg pull-left imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-			<div class="reg pull-right imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-		</div>
-		<p class="p1"></p>
-		<div class="skill">
-			<div class="seckill reg pull-left">
-				<div class="line1 reg pull-left"></div>
-				<div class=" reg pull-right">
-					新品特惠 <img src="images/new_33.gif" alt="" class="img3">
-				</div>
-			</div>
-			<div class="seckil2 reg pull-right">
-				更多 <span class="img6 iconfont icon-qianjin"></span>
-			</div>
-		</div>
-		<div class="maindiv">
-			<div class="reg pull-left imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-			<div class="reg pull-right imgdiv">
-				<a href="#"> <img src="images/iddex_11.gif" class="img5" alt="">
-				</a>
-			</div>
-		</div>
-		<p class="p1"></p>
-
+		
 		<div class="footer navbar-fixed-bottom" style="border-color: #fff;">
 			<div class="row" id="bottom">
 				<div class="col-xs-2" id="mh-index">
